--- a/BdHeatingPointMap.html
+++ b/BdHeatingPointMap.html
@@ -1,102 +1,102 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/element-ui/lib/theme-chalk/index.css"
-    />
-    <link rel="stylesheet" href="css/PointHeating.css" />
-    <script
-      type="text/javascript"
-      src="http://api.map.baidu.com/api?v=2.0&ak=seoj3vwbzAoGhvZP6N31KFf1M9tAci3Q"
-    ></script>
-    <script
-      type="text/javascript"
-      src="http://api.map.baidu.com/library/Heatmap/2.0/src/Heatmap_min.js"
-    ></script>
-    <title>百度点位热力图</title>
-  </head>
-  <body>
-    <div id="container"></div>
-    <div id="app" v-cloak>
-      <!--      搜索框-->
-      <div class="serch_border">
-        <el-input placeholder="请输入内容" v-model="input1">
-          <template slot="append">搜索</template>
-        </el-input>
-      </div>
-      <!--      热力框内容-->
-      <div class="hoting_border">
-        <div class="left_hotinglevaing">
-          <div v-for="item in items">
-            <div style="margin: 0 0 20px 0">{{item.namelv }}</div>
-          </div>
-        </div>
-        <div class="right_hotinviewg">
-          <div class="lineview"></div>
-        </div>
-      </div>
-
-      <!--      右侧数量统计-->
-      <div class="quantity_border">
-        <div class="left_quantityname">
-          <div v-for="item in quitems" style="display: flex">
-            <div style="margin: 0 0 20px 9px; width: 55px">
-              {{item.namelv }}
-            </div>
-            <div style="margin: 0 0 20px 0; width: 65px">{{item.quantit }}</div>
-          </div>
-        </div>
+<head>
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
+  <meta content="initial-scale=1.0, user-scalable=no" name="viewport"/>
+  <link
+          href="https://unpkg.com/element-ui/lib/theme-chalk/index.css"
+          rel="stylesheet"
+  />
+  <link href="css/PointHeating.css" rel="stylesheet"/>
+  <script
+          src="http://api.map.baidu.com/api?v=2.0&ak=seoj3vwbzAoGhvZP6N31KFf1M9tAci3Q"
+          type="text/javascript"
+  ></script>
+  <script
+          src="http://api.map.baidu.com/library/Heatmap/2.0/src/Heatmap_min.js"
+          type="text/javascript"
+  ></script>
+  <title>百度点位热力图</title>
+</head>
+<body>
+<div id="container"></div>
+<div v-cloak id="app">-
+  <!--      搜索框-->
+  <div class="serch_border">
+    <el-input v-model="input1" placeholder="请输入内容">
+      <template slot="append">搜索</template>
+    </el-input>
+  </div>
+  <!--      热力框内容-->
+  <div class="hoting_border">
+    <div class="left_hotinglevaing">
+      <div v-for="item in items">
+        <div style="margin: 0 0 20px 0">{{ item.namelv }}</div>
       </div>
     </div>
-  </body>
-  <script src="https://unpkg.com/vue@2/dist/vue.js"></script>
-  <!-- import JavaScript -->
-  <script src="https://unpkg.com/element-ui/lib/index.js"></script>
-  <script>
-    new Vue({
-      el: "#app",
-      data: function () {
-        return {
-          input1: "",
-          items: [
-            {
-              namelv: "1~20",
-            },
-            {
-              namelv: "21~40",
-            },
-            {
-              namelv: "41~60",
-            },
-            {
-              namelv: "60~100",
-            },
-          ],
-          quitems: [
-            {
-              namelv: "全部",
-              quantit: 100,
-            },
-            {
-              namelv: "容城",
-              quantit: 2,
-            },
-            {
-              namelv: "安新",
-              quantit: 50,
-            },
-            {
-              namelv: "雄县",
-              quantit: 30,
-            },
-          ],
-        };
-      },
-    });
-  </script>
+    <div class="right_hotinviewg">
+      <div class="lineview"></div>
+    </div>
+  </div>
+
+  <!--      右侧数量统计-->
+  <div class="quantity_border">
+    <div class="left_quantityname">
+      <div v-for="item in quitems" style="display: flex">
+        <div style="margin: 0 0 20px 9px; width: 55px">
+          {{ item.namelv }}
+        </div>
+        <div style="margin: 0 0 20px 0; width: 65px">{{ item.quantit }}</div>
+      </div>
+    </div>
+  </div>
+</div>
+</body>
+<script src="https://unpkg.com/vue@2/dist/vue.js"></script>
+<!-- import JavaScript -->
+<script src="https://unpkg.com/element-ui/lib/index.js"></script>
+<script>
+  new Vue({
+    el: "#app",
+    data: function () {
+      return {
+        input1: "",
+        items: [
+          {
+            namelv: "1~20",
+          },
+          {
+            namelv: "21~40",
+          },
+          {
+            namelv: "41~60",
+          },
+          {
+            namelv: "60~100",
+          },
+        ],
+        quitems: [
+          {
+            namelv: "全部",
+            quantit: 100,
+          },
+          {
+            namelv: "容城",
+            quantit: 2,
+          },
+          {
+            namelv: "安新",
+            quantit: 50,
+          },
+          {
+            namelv: "雄县",
+            quantit: 30,
+          },
+        ],
+      };
+    },
+  });
+</script>
 </html>
 <script src="js/point.js"></script>
 <script type="text/javascript">
@@ -108,7 +108,7 @@
   //热力图
   if (!isSupportCanvas()) {
     alert(
-      "热力图仅对支持canvas的浏览器适用,您所使用的浏览器不能使用热力图功能,请换个浏览器试试~"
+        "热力图仅对支持canvas的浏览器适用,您所使用的浏览器不能使用热力图功能,请换个浏览器试试~"
     );
   }
   heatmapOverlay = new BMapLib.HeatmapOverlay({
@@ -123,7 +123,8 @@
   });
   // 添加热力点标记
   map.addOverlay(heatmapOverlay);
-  heatmapOverlay.setDataSet({ data: points, max: 100 });
+  heatmapOverlay.setDataSet({data: points, max: 100});
+
   //判断浏览区是否支持canvas
   function isSupportCanvas() {
     var elem = document.createElement("canvas");
@@ -131,12 +132,12 @@
   }
 
   let myIcon = new BMap.Icon(
-    "/images/圆.png",
-    new BMap.Size(60, 60),
-    {
-      anchor: new BMap.Size(10, 25), // 设置图标的中心点
-      imageSize: new BMap.Size(15, 15),
-    } // 设置图标的尺寸
+      "/images/圆.png",
+      new BMap.Size(60, 60),
+      {
+        anchor: new BMap.Size(10, 25), // 设置图标的中心点
+        imageSize: new BMap.Size(15, 15),
+      } // 设置图标的尺寸
   );
 
   for (let i = 0; i < imagepoints.length; i++) {
@@ -155,5 +156,6 @@
   function showInfo(e) {
     alert(e.point.lng + ", " + e.point.lat);
   }
+
   map.addEventListener("click", showInfo);
 </script>
