--- a/CoverMap/BdCoverPointMap.html
+++ b/CoverMap/BdCoverPointMap.html
@@ -9,17 +9,19 @@
   />
   <link href="../css/CoverMapPoint.css" rel="stylesheet"/>
   <script
-          src="http://api.map.baidu.com/api?v=2.0&ak=seoj3vwbzAoGhvZP6N31KFf1M9tAci3Q"
-          type="text/javascript"
-  ></script>
-  <script
-          src="http://api.map.baidu.com/library/Heatmap/2.0/src/Heatmap_min.js"
+          src="https://api.map.baidu.com/api?type=webgl&v=1.0&ak=seoj3vwbzAoGhvZP6N31KFf1M9tAci3Q"
           type="text/javascript"
   ></script>
   <title>百度点位热力图</title>
+  <script>
+    (function () {
+      document.getElementById('container').style.position = 'sticky'
+    })()
+  </script>
 </head>
 <body>
-<div id="container"></div>
+<div id="container" style="width: 100%; height: 100%; ">
+</div>
 <div v-cloak id="app">
   <!--      搜索框-->
   <div class="serch_border">
@@ -48,6 +50,7 @@
     </div>
   </div>
 </div>
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 
@@ -169,12 +172,16 @@
 
 <script src="../js/CoverPoint.js"></script>
 <script>
-  let map = new BMap.Map("container"); // 创建地图实例
-  let point = new BMap.Point(116.034115, 38.937576);
+
+  let map = new BMapGL.Map("container", {
+    enableHighResolution: true,
+  }); // 创建地图实例
+  let point = new BMapGL.Point(116.034115, 38.937576);
   map.centerAndZoom(point, 11); // 初始化地图，设置中心点坐标和地图级别
   map.enableScrollWheelZoom(); // 允许滚轮缩放
   let LavelMap = [];
   let LavelTwoMap = [];
+
 
   //覆盖物自定义
   function if_coversize(cover_size) {
@@ -182,28 +189,28 @@
     let size_thirty = 150;
     let size_fifty = 220;
 
-    let myIcon_twenty = new BMap.Icon(
+    let myIcon_twenty = new BMapGL.Icon(
         "/images/数字20.png",
-        new BMap.Size(size_twenty, size_twenty),
+        new BMapGL.Size(size_twenty, size_twenty),
         {
-          anchor: new BMap.Size(size_twenty / 1.6, size_twenty / 2.4), // 设置图标的中心点
-          imageSize: new BMap.Size(size_twenty, size_twenty),
+          anchor: new BMapGL.Size(size_twenty / 1.6, size_twenty / 2.4), // 设置图标的中心点
+          imageSize: new BMapGL.Size(size_twenty, size_twenty),
         } // 设置图标的尺寸
     );
-    let myIcon_thirty = new BMap.Icon(
+    let myIcon_thirty = new BMapGL.Icon(
         "/images/数字30.png",
-        new BMap.Size(size_thirty, size_thirty),
+        new BMapGL.Size(size_thirty, size_thirty),
         {
-          anchor: new BMap.Size(size_thirty / 1.6, size_thirty / 2.4), // 设置图标的中心点
-          imageSize: new BMap.Size(size_thirty, size_thirty),
+          anchor: new BMapGL.Size(size_thirty / 1.6, size_thirty / 2.4), // 设置图标的中心点
+          imageSize: new BMapGL.Size(size_thirty, size_thirty),
         } // 设置图标的尺寸
     );
-    let myIcon_fifty = new BMap.Icon(
+    let myIcon_fifty = new BMapGL.Icon(
         "/images/数字50.png",
-        new BMap.Size(size_fifty, size_fifty),
+        new BMapGL.Size(size_fifty, size_fifty),
         {
-          anchor: new BMap.Size(size_fifty / 1.6, size_fifty / 2.4), // 设置图标的中心点
-          imageSize: new BMap.Size(size_fifty, size_fifty),
+          anchor: new BMapGL.Size(size_fifty / 1.6, size_fifty / 2.4), // 设置图标的中心点
+          imageSize: new BMapGL.Size(size_fifty, size_fifty),
         } // 设置图标的尺寸
     );
     switch (cover_size) {
@@ -228,22 +235,17 @@
   //一级点位显示
   function add_LavelOne_coverPointMap() {
     for (let i = 0; i < imagepoints.length; i++) {
-      let pt = new BMap.Point(imagepoints[i].lng, imagepoints[i].lat);
+      let pt = new BMapGL.Point(imagepoints[i].lng, imagepoints[i].lat);
       let cover_size = imagepoints[i].coversize;
-      let marker = new BMap.Marker(pt, {
+      let marker = new BMapGL.Marker(pt, {
         // icon: myIcon_fifty,
         icon: if_coversize(cover_size),
+
       });
       // 在地图上添加点标记
       LavelMap.push(marker);
-      console.log(typeof marker);
       map.addOverlay(marker);
 
-      function goto(e) {
-        window.open("Pointinfo.html");
-      }
-
-      marker.addEventListener("click", goto);
     }
   }
 
@@ -259,17 +261,17 @@
   // 二级地图展示点位
   function add_LavelTwo_PointMap() {
     let Leval_sizetwenty = 30;
-    let Leval_myIcontwenty = new BMap.Icon(
+    let Leval_myIcontwenty = new BMapGL.Icon(
         "/images/地图,图钉,标记,标点.png",
-        new BMap.Size(Leval_sizetwenty, Leval_sizetwenty),
+        new BMapGL.Size(Leval_sizetwenty, Leval_sizetwenty),
         {
-          anchor: new BMap.Size(Leval_sizetwenty / 1.6, Leval_sizetwenty / 2.4), // 设置图标的中心点
-          imageSize: new BMap.Size(Leval_sizetwenty, Leval_sizetwenty),
+          anchor: new BMapGL.Size(Leval_sizetwenty / 1.6, Leval_sizetwenty / 2.4), // 设置图标的中心点
+          imageSize: new BMapGL.Size(Leval_sizetwenty, Leval_sizetwenty),
         } // 设置图标的尺寸
     );
     for (let i = 0; i < coverpoints.length; i++) {
-      let pt = new BMap.Point(coverpoints[i].lng, coverpoints[i].lat);
-      let marker = new BMap.Marker(pt, {
+      let pt = new BMapGL.Point(coverpoints[i].lng, coverpoints[i].lat);
+      let marker = new BMapGL.Marker(pt, {
         icon: Leval_myIcontwenty,
       });
       // 在地图上添加点标记
@@ -278,6 +280,22 @@
     }
   }
 
+  map.setDisplayOptions({
+    poiText: false,  // 隐藏poi标注
+    poiIcon: false,  // 隐藏poi图标
+    building: false  // 隐藏楼块
+  });
+
+
+  var pStart = new BMapGL.Point(115.949027, 38.858502);
+  var pEnd = new BMapGL.Point(115.98381, 38.825004);
+  var bounds = new BMapGL.Bounds(new BMapGL.Point(pStart.lng, pEnd.lat), new BMapGL.Point(pEnd.lng, pStart.lat));
+  var imgOverlay = new BMapGL.GroundOverlay(bounds, {
+    type: 'image',
+    url: '../images/三级图片/01总平面图-裁切.png',
+    opacity: 1
+  });
+
   function delete_LevalTwoMap() {
     for (let i = 0; i < LavelTwoMap.length; i++) {
       let point = LavelTwoMap[i];
@@ -285,32 +303,41 @@
     }
   }
 
+
   map.addEventListener("zoomend", function (e) {
-    let zoom = map.getZoom(); // 获取缩放级别
-    console.log(zoom);
-    switch (zoom) {
-      case 11:
+    var zoom = map.getZoom(); // 获取缩放级别
+    console.log(zoom)
+    switch (true) {
+      case zoom < 11.532185697845332:
         add_LavelOne_coverPointMap();
-        delete_LevalTwoMap();
         map.addOverlay(xionanborder);
+        map.setTilt(0);
+        delete_LevalTwoMap();
+        map.removeOverlay(imgOverlay);
         break;
-      case 13:
+      case (11.532185697845332 <= zoom && zoom < 12.645907699966495):
         add_LavelTwo_PointMap();
+        map.setTilt(0);
         delete_LevalMap();
         map.removeOverlay(xionanborder);
-        break;
-      case 11:
-        break;
-      case 11:
+        map.removeOverlay(imgOverlay);
         break;
       default:
+        map.setTilt(50);
+        map.addOverlay(imgOverlay);
+        delete_LevalMap();
+        delete_LevalTwoMap();
+        map.removeOverlay(xionanborder);
         break;
     }
+
+
   });
 
   // 监听地图点
   // function showInfo(e) {
   //   alert(e.point.lng + ", " + e.point.lat);
   // }
+  //
   // map.addEventListener("click", showInfo);
 </script>
